src/semantic/tests/data/negative/async-builtin-2.hsh
{ foo | bar | cd | baz }.status
